# ttv-emote-profile

./: .gitignore  README.md
frontend/: index.html
src/: 2022-02-22.txt  Cargo.toml
src/src/: main.rs  utils.rs
ttv_emote_profile/: 2022-02-22.txt  Cargo.toml  emotes.json
ttv_emote_profile/src/: main.rs
