[package]
name = "ttv-emote-profile"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twitch-irc = "3.0.1"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.9", features = ["blocking"]}
select = "0.5.0"
scraper = { version = "0.12.0"}
soup = "0.5.1"
