[package]
name = "ttv_emote_profile"
version = "0.1.0"
edition = "2021"

[dependencies]
twitch-irc = "3.0.1"
tokio = { version = "1.17.0", features = ["full"] }
reqwest = { version = "0.11.9", features = ["blocking"]}
select = "0.5.0"
scraper = { version = "0.12.0"}
soup = "0.5.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24.0"

